# django

./: .gitignore  README.md  base.html  db.sqlite3  gitignore  requirements.txt
DjangoProfolio/: README.md  base.html  db.sqlite3  pyproject.toml
DjangoProfolio/core/: settings.py  urls.py
DjangoProfolio/pages/: urls.py
DjangoProfolio/pages/templates/: pages_base.html
DjangoProfolio/projects/: admin.py
DjangoProfolio/projects/templates/projects/: project_detail.html
pages/: views.py
pages/templates/pages/: home.html
projects/: models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_image.py  0003_project_link.py
projects/templates/projects/: project_detail.html  project_index.html
templates/: base.html
