[tool.poetry]
name = "djangoportfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-bootstrap5 = "^23.4"
pillow = "^10.2.0"
asgiref = "^3.7.2"
sqlparse = "^0.4.4"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
black = "^23.12.1"
isort = "^5.13.2"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
